<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <View
        android:id="@+id/topViewSignup"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:background="@color/primary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/topView2Signup"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topViewSignup" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topView2Signup"
        android:layout_margin="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmailSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:hint="@string/helpTextInputLayout"
            app:helperTextEnabled="false"
            android:layout_marginBottom="@dimen/marginTextInput">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:helperText="@string/helpTextInputLayout"
            app:helperTextEnabled="false"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="@dimen/marginTextInput">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnLoginText"
            android:layout_marginTop="15dp"
            android:background="@color/primary_dark"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/marginTextInput"
            android:paddingHorizontal="@dimen/paddignButtons"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvSignUpText"
            android:layout_marginVertical="@dimen/marginTextInput"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imgSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/topViewSignup"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_person" />

    <TextView
        android:id="@+id/tvTitleSignup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/tvSingInTitleText"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/topViewSignup"
        app:layout_constraintEnd_toStartOf="@+id/imgSignup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>